fix solarized dircolors, and pryrc in railsconsole

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -79,7 +79,7 @@ set unicode_ellipsis false
 set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
-# default, jungle, snow, solarized
+# default, jungle, snow, solarized, ls_colors
 set colorscheme default
 
 # Preview files on the rightmost column?
