update tmux / vim colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,13 +10,16 @@
   bind C-l send-keys 'C-l'
 # }}}
 
-set-option -sg escape-time 10 # change the escape time in tmux to zero, improves vim responsiveness
-set-option -g history-limit 1000 # Increase scrollback history
-# set-option -g history-limit 500000 # Increase scrollback history
+set-option -sg escape-time 0 # change the escape time in tmux to zero, improves vim responsiveness
+set-option -g history-limit 50000 # Increase scrollback history
 
 set -g default-terminal "screen-256color"
-set -g default-shell /bin/sh
+# set -g default-shell /bin/sh
+set -g default-shell /usr/local/bin/fish
+
 set -g default-command ${SHELL}
+if-shell "type 'reattach-to-user-namespace' >/dev/null" "set -g default-command 'reattach-to-user-namespace -l $SHELL'"
+# set -g default-command ${SHELL}
 
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
@@ -25,7 +28,6 @@ set -g default-command ${SHELL}
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
-
 setw -g mode-keys vi # enable vim mode
 
 # vi-copy settings (<prefix> v) {{{
@@ -73,8 +75,8 @@ setw -g mode-keys vi # enable vim mode
 # }}}
 
 # Panes options {{{
-  set -g pane-border-style fg='#839496',bg='default'
-  set -g pane-active-border-style fg='#839496',bg='default'
+  set -g pane-border-style fg='black',bg='black'
+  set -g pane-active-border-style fg='black',bg='black'
 
   set -g display-panes-colour default
   set -g display-panes-active-colour yellow
@@ -84,7 +86,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
 # ── Status/Window settings ────────────────────────────────────────────────────────
 
-  setw -g clock-mode-colour cyan
+  setw -g clock-mode-colour brightblue
 
 # Status options {{{
   set-option -g status on
@@ -95,13 +97,14 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-position "top"
   set-option -g status-bg 'brightblack'
   set-option -g status-fg 'brightgreen'
+  set-option -g status-keys emacs # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys.
 # }}}
 
 
 # Messages {{{
   set -g message-style fg='black',bg='yellow'
   set -g message-command-style fg='black',bg='yellow'
-  set -g display-time 1
+  set -g display-time 4000
 # }}}
 
 
@@ -119,7 +122,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
   # Style {{{
     set -g window-status-current-style fg='brightblue, bold'
-    set -g window-status-activity-style fg='brightyellow, italic'
+    set -g window-status-activity-style fg='brightyellow'
   # }}}
 # }}}
 
