Add nvim-lsp config and cleanup snowblock artifacts

--- a/tmux.conf
+++ b/tmux.conf
@@ -95,8 +95,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-left-length 500
   set-option -g status-right-length 500
   set-option -g status-position "top"
-  set-option -g status-bg 'brightblack'
-  set-option -g status-fg 'brightgreen'
+  set -g status-style bg='brightblack',fg='brightgreen'
   set-option -g status-keys emacs # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys.
 # }}}
 
@@ -118,6 +117,8 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
   # Format {{{
     set -g window-status-separator " "
+    set -g window-status-format "#I:#W"
+    # set -g window-status-format "#{=1:#I,A,#I}"
   # }}}
 
   # Style {{{
@@ -153,15 +154,13 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @plugin "alexanderjeurissen/tmux-world-clock"
   set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
+  # run "~/Development/open-source/tmux-nerd-status/tmux_nerd_status.tmux"
   # Check if tmux plugin manager is installed, otherwise clone it.
   if "test ! -d ~/.tmux/plugins/tpm" \
      "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
   # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
   run '~/.tmux/plugins/tpm/tpm'
-
-  # Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
-  # setw -g aggressive-resize off
 # }}}
 
 # vim: foldmethod=marker:sw=2:foldlevel=10
