Simplify and make tmux conf more minimal

--- a/tmux.conf
+++ b/tmux.conf
@@ -95,8 +95,10 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-left-length 500
   set-option -g status-right-length 500
   set-option -g status-position "top"
-  set -g status-style bg='brightblack',fg='brightgreen'
+  set -g status-style bg='black',fg='brightgreen'
+  # set -g status-style bg='brightblack',fg='brightgreen'
   set-option -g status-keys emacs # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys.
+  setw -g pane-border-status top # add a empty line below statusline
 # }}}
 
 
@@ -127,20 +129,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 # }}}
 
-# status line {{{
-  set -g @pomodoro_duration 10
-  set -g @pomodoro_show_clock 'on_stop'
-  set -g @pomodoro_fg_color 'blue'
-  set -g @pomodoro_bg_color 'blue'
-
-  set -g @world_clock_tz 'Europe/Amsterdam'
-  set -g @world_clock_tz 'America/New_York'
-  set -g @world_clock_tz 'America/Los_Angeles'
-
-  set-option -g status-left "#{pomodoro_status}"
-  set-option -g status-right " #{world_clock_status}"
-# }}}
-
 # Tmux plugins {{{
   set -g @plugin "tmux-plugins/tpm"
   set -g @plugin "tmux-plugins/tmux-continuum"
@@ -150,9 +138,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @plugin "tmux-plugins/tmux-pain-control"
   set -g @plugin "christoomey/vim-tmux-navigator"
   set -g @plugin "tmux-plugins/tmux-sessionist"
-  set -g @plugin "alexanderjeurissen/tmx-pomodoro"
-  set -g @plugin "alexanderjeurissen/tmux-world-clock"
-  set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
   # run "~/Development/open-source/tmux-nerd-status/tmux_nerd_status.tmux"
   # Check if tmux plugin manager is installed, otherwise clone it.
