--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,7 @@ setw -g mode-keys vi # enable vim mode
   set -g display-panes-active-colour yellow
 # }}}
 
-set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
+# set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
 
 # ── Status/Window settings ────────────────────────────────────────────────────────
 
@@ -95,8 +95,10 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-left-length 500
   set-option -g status-right-length 500
   set-option -g status-position "top"
-  set -g status-style bg='black',fg='brightgreen'
-  # set -g status-style bg='brightblack',fg='brightgreen'
+  # set -g status-style bg='black',fg='brightgreen'
+  set -g status-style bg='brightblack',fg='brightgreen'
+  set -g status-left  ""
+  set -g status-right  ""
   set-option -g status-keys emacs # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys.
   setw -g pane-border-status top # add a empty line below statusline
 # }}}
@@ -129,6 +131,11 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 # }}}
 
+# # Create tmux lock file {{{
+#   if "test ! -f ~/.tmux/tmux_session_#S.pid" \
+#     "run 'touch ~/.tmux/tmux_session_#S.pid'"
+# # }}}
+
 # Tmux plugins {{{
   set -g @plugin "tmux-plugins/tpm"
   set -g @plugin "tmux-plugins/tmux-continuum"
@@ -139,7 +146,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @plugin "christoomey/vim-tmux-navigator"
   set -g @plugin "tmux-plugins/tmux-sessionist"
 
-  # run "~/Development/open-source/tmux-nerd-status/tmux_nerd_status.tmux"
   # Check if tmux plugin manager is installed, otherwise clone it.
   if "test ! -d ~/.tmux/plugins/tpm" \
      "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
