--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -13,14 +13,18 @@ env:
   TERM: xterm-256color-italic
 
 shell:
- program: /usr/local/bin/fish
+ program: /opt/homebrew/bin/fish
+#program: /usr/local/bin/fish
  args:
    - --login
    - -C
-   # - 'fish ~/.scripts/tmux_wrapper.fish'
    - 'if tmux has-session &> /dev/null; exec tmux attach-session; else; exec tmux new-session; end'
 
 window:
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  opacity: 1.0
+
   # Window dimensions (changes require restart)
   #
   # Specified in number of columns/lines, not pixels.
@@ -131,7 +135,7 @@ font:
 draw_bold_text_with_bright_colors: false
 
 schemes:
-  solarized_light: &light
+  solarized_light: &solarized_light
     # Default colors
     primary:
       background: '#eee8d5' # base2
@@ -163,7 +167,8 @@ schemes:
       magenta: '#6c71c4' # violet
       cyan:    '#93a1a1' # base1
       white:   '#fdf6e3' # base3
-  solarized_dark: &dark
+
+  solarized_dark: &solarized_dark
     # Default colors
     primary:
       background: '#002b36' # base03
@@ -198,19 +203,83 @@ schemes:
       cyan:    '#93a1a1' # base1
       white:   '#fdf6e3' # base3
 
-colors: *dark
+  gruvbox_light: &gruvbox_light
+    # Default colors
+    primary:
+      # hard contrast: background = '#f9f5d7'
+      # background: '#fbf1c7'
+      background: '#f2e5bc'
+      foreground: '#3c3836'
+
+    # Cursor colors
+    cursor:
+       text: CellBackground
+       cursor: CellForeground
+
+    # Normal colors
+    normal:
+      black:   '#fbf1c7'
+      red:     '#cc241d'
+      green:   '#98971a'
+      yellow:  '#d79921'
+      blue:    '#458588'
+      magenta: '#b16286'
+      cyan:    '#689d6a'
+      white:   '#7c6f64'
+
+    # Bright colors
+    bright:
+      black:   '#928374'
+      red:     '#9d0006'
+      green:   '#79740e'
+      yellow:  '#b57614'
+      blue:    '#076678'
+      magenta: '#8f3f71'
+      cyan:    '#427b58'
+      white:   '#3c3836'
+
+  gruvbox_dark: &gruvbox_dark
+    # Default colors
+    primary:
+      # hard contrast: background = '#1d2021'
+      background: '#282828'
+      # soft contrast: background = '#32302f'
+      foreground: '#ebdbb2'
+
+    # Cursor colors
+    cursor:
+       text: CellBackground
+       cursor: CellForeground
+
+   # Normal colors
+    normal:
+      black:   '#282828'
+      red:     '#cc241d'
+      green:   '#98971a'
+      yellow:  '#d79921'
+      blue:    '#458588'
+      magenta: '#b16286'
+      cyan:    '#689d6a'
+      white:   '#a89984'
+
+    # Bright colors
+    bright:
+      black:   '#928374'
+      red:     '#fb4934'
+      green:   '#b8bb26'
+      yellow:  '#fabd2f'
+      blue:    '#83a598'
+      magenta: '#d3869b'
+      cyan:    '#8ec07c'
+      white:   '#ebdbb2'
+
+colors: *gruvbox_dark
 
 # Specifying a `duration` of `0` will disable the visual bell.
 bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
 
 # Mouse bindings
 #
@@ -242,12 +311,13 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
 
-  url:
+  # TODO: deprecated look into the `hints` section instead
+  #url:
     # URL launcher
     #
     # This program is executed when clicking on a text which is recognized as a URL.
     # The URL is always added to the command as the last parameter.
-    launcher: open
+    #launcher: open
 
     # URL modifiers
     #
