--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,9 @@ set-option -sg escape-time 0 # change the escape time in tmux to zero, improves 
 set-option -g history-limit 50000 # Increase scrollback history
 
 set -g default-terminal "screen-256color"
-# set -g default-shell /bin/sh
-set -g default-shell /usr/local/bin/fish
+set -g default-shell /bin/sh
+# set -g default-shell /usr/local/bin/fish
+set -g default-shell /opt/homebrew/bin/fish
 
 set -g default-command ${SHELL}
 if-shell "type 'reattach-to-user-namespace' >/dev/null" "set -g default-command 'reattach-to-user-namespace -l $SHELL'"
@@ -95,8 +96,8 @@ setw -g mode-keys vi # enable vim mode
   set-option -g status-left-length 500
   set-option -g status-right-length 500
   set-option -g status-position "top"
-  # set -g status-style bg='black',fg='brightgreen'
-  set -g status-style bg='brightblack',fg='brightgreen'
+  set -g status-style bg='#ebdbb2',fg='#665c54' # gruvbox
+  # set -g status-style bg='brightblack',fg='brightgreen' # solarized
   set -g status-left  ""
   set -g status-right  ""
   set-option -g status-keys emacs # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys.
