--- a/tmux.conf
+++ b/tmux.conf
@@ -14,9 +14,7 @@ set-option -sg escape-time 0 # change the escape time in tmux to zero, improves 
 set-option -g history-limit 50000 # Increase scrollback history
 
 set -g default-terminal "screen-256color"
-set -g default-shell /bin/sh
-# set -g default-shell /usr/local/bin/fish
-set -g default-shell /opt/homebrew/bin/fish
+set -g default-shell ${SHELL}
 
 set -g default-command ${SHELL}
 if-shell "type 'reattach-to-user-namespace' >/dev/null" "set -g default-command 'reattach-to-user-namespace -l $SHELL'"
