Make tmux space-vim friendly

--- a/tmux.conf
+++ b/tmux.conf
@@ -76,8 +76,9 @@ setw -g mode-keys vi # enable vim mode
 # }}}
 
 # Panes options {{{
-  set -g pane-border-style fg='black',bg='black'
-  set -g pane-active-border-style fg='black',bg='black'
+  # set -g pane-border-style fg='black',bg='black'
+  set -g pane-border-style fg='black',bg='default' # space
+  set -g pane-active-border-style fg='black',bg='default'
 
   set -g display-panes-colour default
   set -g display-panes-active-colour yellow
@@ -91,17 +92,18 @@ setw -g mode-keys vi # enable vim mode
 
 # Status options {{{
   set-option -g status on
-  set-option -g status-interval 1     # redraw status line every 10 seconds
+  set-option -g status-interval 1 # redraw status line every 10 seconds
   set-option -g status-justify "left"
   set-option -g status-left-length 500
   set-option -g status-right-length 500
   set-option -g status-position "top"
-  set -g status-style bg='#ebdbb2',fg='#665c54' # gruvbox
+  set -g status-style bg='black',fg='white' # space
+  # set -g status-style bg='#ebdbb2',fg='#665c54' # gruvbox
   # set -g status-style bg='brightblack',fg='brightgreen' # solarized
   set -g status-left  ""
   set -g status-right  ""
   set-option -g status-keys emacs # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys.
-  setw -g pane-border-status top # add a empty line below statusline
+  set -g pane-border-status "off" # add a empty line below statusline
 # }}}
 
 
