Make tmux.conf less colorscheme dependent

--- a/tmux.conf
+++ b/tmux.conf
@@ -75,8 +75,8 @@ setw -g mode-keys vi # enable vim mode
 
 # Panes options {{{
   # set -g pane-border-style fg='black',bg='black'
-  set -g pane-border-style fg='black',bg='default' # space
-  set -g pane-active-border-style fg='black',bg='default'
+  set -g pane-border-style fg='default',bg='default' # space
+  set -g pane-active-border-style fg='default',bg='default'
 
   set -g display-panes-colour default
   set -g display-panes-active-colour yellow
