--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -13,8 +13,8 @@ env:
   TERM: xterm-256color-italic
 
 shell:
-# program: /opt/homebrew/bin/fish
- program: /usr/local/bin/fish
+ program: /opt/homebrew/bin/fish
+# program: /usr/local/bin/fish
  args:
    - --login
    - -C
@@ -392,7 +392,7 @@ schemes:
       white:   '#888F94'
 
 
-colors: *zen_bones_light
+colors: *solarized_light
 
 # Specifying a `duration` of `0` will disable the visual bell.
 bell:
