--- a/tmux.conf
+++ b/tmux.conf
@@ -29,6 +29,12 @@ set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
 setw -g mode-keys vi # enable vim mode
 
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
+
 # vi-copy settings (<prefix> v) {{{
   unbind v
   bind v copy-mode
@@ -75,8 +81,8 @@ setw -g mode-keys vi # enable vim mode
 
 # Panes options {{{
   # set -g pane-border-style fg='black',bg='black'
-  set -g pane-border-style fg='default',bg='default' # space
-  set -g pane-active-border-style fg='default',bg='default'
+  set -g pane-border-style fg='white',bg='default' # space
+  set -g pane-active-border-style fg='white',bg='default'
 
   set -g display-panes-colour default
   set -g display-panes-active-colour yellow
