--- a/config/nvim/rocks.toml
+++ b/config/nvim/rocks.toml
@@ -6,7 +6,7 @@
 # PLUGINS: List of Neovim plugins to install alongside their versions.
 # If the plugin name contains a dot then you must add quotes to the key name!
 [plugins] # {{{
-"rocks.nvim" = "2.36.1"
+"rocks.nvim" = "2.38.2"
 "rocks-config.nvim" = "2.2.0"
 "rocks-git.nvim" = "2.0.1"
 "rocks-lazy.nvim" = "scm"
@@ -19,7 +19,7 @@ neorg-telescope = "1.2.2"
 
 nvim-lspconfig = "0.1.8"
 
-"oil.nvim" = "2.11.0"
+"oil.nvim" = "2.12.1"
 "unimpaired.nvim" = "0.2.0"
 "guess-indent.nvim" = "scm"
 nvim-web-devicons = "0.100"
@@ -30,7 +30,7 @@ nvim-ufo = "1.4.0"
 
 "diffview.nvim" = "scm"
 neogit = "1.0.0"
-neotest = "5.4.0"
+neotest = "5.4.1"
 neotest-jest = "scm"
 neotest-rspec = "scm"
 cmp-nvim-lsp = "scm"
@@ -40,12 +40,47 @@ cmp-path = "scm"
 cmp-buffer = "scm"
 neorg = "9.1.1"
 copilot-cmp = "scm"
-"copilot.lua" = { git = "zbirenbaum/copilot.lua" }
-nvim-treesitter-legacy-api = "0.9.2"
+"copilot.lua" = "scm"
 tree-sitter-toml = "0.0.2"
 tree-sitter-lua = "0.0.2"
-tree-sitter-ruby = "0.0.2"
+tree-sitter-ruby = "0.0.3"
+tree-sitter-yaml = "0.0.2"
+tree-sitter-markdown = "0.0.2"
+tree-sitter-json = "0.0.3"
+tree-sitter-vimdoc = "0.0.2"
 tree-sitter-tsx = "0.0.3"
+nvim-treesitter-legacy-api = "0.9.2"
+tree-sitter-typescript = "0.0.3"
+tree-sitter-javascript = "0.0.3"
+tree-sitter-ecma = "0.0.2"
+tree-sitter-jsx = "0.0.2"
+tree-sitter-vim = "0.0.3"
+tree-sitter-graphql = "0.0.2"
+tree-sitter-scss = "0.0.2"
+tree-sitter-embedded_template = "0.0.3"
+tree-sitter-norg = "0.2.4"
+tree-sitter-sql = "0.0.3"
+orgmode = "0.3.5"
+tree-sitter-orgmode = "1.3.2"
+"headlines.nvim" = "scm"
+tree-sitter-python = "0.0.3"
+"noice.nvim" = "4.5.0"
+
+[plugins."org-bullets.nvim" ]
+git = "akinsho/org-bullets.nvim"
+rev = "ab8e1d860d61239c4fe187ead15f73bb2561acd1"
+
+[plugins."tailwind-tools.nvim" ]
+git = "luckasRanarison/tailwind-tools.nvim"
+rev = "v0.3.0"
+
+[plugins."lspkind.nvim" ]
+git = "onsails/lspkind.nvim"
+rev = "cff4ae321a91ee3473a92ea1a8c637e3a9510aec"
+
+[plugins."blame.nvim" ]
+git = "FabijanZulj/blame.nvim"
+rev = "dedbcdce857f708c63f261287ac7491a893912d0"
 
 [plugins."fileline.nvim" ]
 git = "lewis6991/fileline.nvim"
@@ -77,10 +112,23 @@ rev = "v1.3.0"
 
 # BUNDLES: bundles allow for a single plugins/x.lua file per bundle instead of per plugin
 # {{{
+[bundles.orgmode]
+items=[
+  "orgmode",
+  "org-bullets.nvim",
+  "tree-sitter-orgmode"
+]
+
 [bundles.neorg]
 items = [
   "neorg",
   # "neorg-contexts"
+]
+
+[bundles.git]
+items = [
+  "neogit",
+  "diffview.nvim",
 ]
 
 [bundles.telescope]
@@ -104,7 +152,8 @@ items = [
   "cmp-cmdline",
   "cmp-nvim-lsp",
   "copilot-cmp",
-  "copilot.lua"
+  "copilot.lua",
+  "lspkind.nvim"
 ]
 # }}}
 
@@ -115,7 +164,10 @@ auto_setup = true
 
 [treesitter] # {{{
 auto_highlight = "all"
-auto_install = "prompt" # true | false
+auto_install = "false" # prompt | true | false
+
+[treesitter.parser_map]
+typescriptreact = "tsx"
 # }}}
 
 # vim: foldmethod=marker:sw=2:foldlevel=10
