--- a/config/nvim/rocks.toml
+++ b/config/nvim/rocks.toml
@@ -10,7 +10,7 @@
 "rocks-config.nvim" = "2.2.0"
 "rocks-git.nvim" = "2.0.1"
 "rocks-lazy.nvim" = "scm"
-"rocks-treesitter.nvim" = "1.0.3"
+"rocks-treesitter.nvim" = "1.1.0"
 
 "plenary.nvim" = "scm"
 "telescope-zf-native.nvim" = "1.0.0"
@@ -41,30 +41,34 @@ cmp-buffer = "scm"
 neorg = "9.1.1"
 copilot-cmp = "scm"
 "copilot.lua" = "scm"
-tree-sitter-toml = "0.0.2"
-tree-sitter-lua = "0.0.2"
-tree-sitter-ruby = "0.0.3"
-tree-sitter-yaml = "0.0.2"
-tree-sitter-markdown = "0.0.2"
-tree-sitter-json = "0.0.3"
-tree-sitter-vimdoc = "0.0.2"
-tree-sitter-tsx = "0.0.3"
+tree-sitter-toml = "scm"
+tree-sitter-lua = "scm"
+tree-sitter-ruby = "scm"
+tree-sitter-yaml = "scm"
+tree-sitter-markdown = "scm"
+tree-sitter-json = "scm"
+tree-sitter-vimdoc = "scm"
+tree-sitter-tsx = "scm"
 nvim-treesitter-legacy-api = "0.9.2"
-tree-sitter-typescript = "0.0.3"
-tree-sitter-javascript = "0.0.3"
-tree-sitter-ecma = "0.0.2"
-tree-sitter-jsx = "0.0.2"
-tree-sitter-vim = "0.0.3"
-tree-sitter-graphql = "0.0.2"
-tree-sitter-scss = "0.0.2"
-tree-sitter-embedded_template = "0.0.3"
+tree-sitter-typescript = "scm"
+tree-sitter-javascript = "scm"
+tree-sitter-ecma = "scm"
+tree-sitter-jsx = "scm"
+tree-sitter-vim = "scm"
+tree-sitter-graphql = "scm"
+tree-sitter-scss = "scm"
+tree-sitter-embedded_template = "scm"
 tree-sitter-norg = "0.2.4"
-tree-sitter-sql = "0.0.3"
+tree-sitter-sql = "scm"
 orgmode = "0.3.5"
 tree-sitter-orgmode = "1.3.2"
 "headlines.nvim" = "scm"
-tree-sitter-python = "0.0.3"
+tree-sitter-python = "scm"
 "noice.nvim" = "4.5.0"
+"CopilotChat.nvim" = { git="CopilotC-Nvim/CopilotChat.nvim", rev="v2.13.1" }
+tree-sitter-css = "scm"
+tree-sitter-bash = "scm"
+
 
 [plugins."org-bullets.nvim" ]
 git = "akinsho/org-bullets.nvim"
