Update neovim configuration

--- a/config/nvim/rocks.toml
+++ b/config/nvim/rocks.toml
@@ -68,6 +68,10 @@ tree-sitter-python = "scm"
 "CopilotChat.nvim" = { git="CopilotC-Nvim/CopilotChat.nvim", rev="v2.13.1" }
 tree-sitter-css = "scm"
 tree-sitter-bash = "scm"
+tree-sitter-gitcommit = "scm"
+tree-sitter-xml = "scm"
+tree-sitter-regex = "scm"
+tree-sitter-markdown_inline = "scm"
 
 
 [plugins."org-bullets.nvim" ]
