Adjust tmux status refresh settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -96,10 +96,10 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 
 # Status options {{{
   set-option -g status on
-  set-option -g status-interval 1 # redraw status line every 10 seconds
+  set-option -g status-interval 10 # redraw status line every 10 seconds.
   set-option -g status-justify "left"
-  set-option -g status-left-length 500
-  set-option -g status-right-length 500
+  set-option -g status-left-length 100
+  set-option -g status-right-length 100
   set-option -g status-position "top"
   set -g status-style bg='default',fg='default' # space
   set -g status-left  ""
