tmux: add paste and focus options

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,10 @@
 set-option -sg escape-time 0 # change the escape time in tmux to zero, improves vim responsiveness
 set-option -g history-limit 50000 # Increase scrollback history
 
+# smoother paste detection and focus tracking
+set-option -g assume-paste-time 1 # assume bracketed paste for 1ms
+set-option -g focus-events on     # allow applications to detect terminal focus changes
+
 set -g default-terminal "screen-256color"
 set -g default-shell ${SHELL}
 
