--- a/gnupg/scdaemon.conf
+++ b/gnupg/scdaemon.conf
@@ -1,5 +1,5 @@
 reader-port Yubico Yubi
-debug-all
-debug-level guru
-disable-ccid
-log-file /tmp/scd.log
+# debug-all
+# debug-level guru
+# disable-ccid
+# log-file /tmp/scd.log
